added docker and changed action workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
-name: flypalng
+name: pmapihuroku
 
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -20,28 +20,24 @@ jobs:
 
     env:
       HEROKU_API_KEY: ${{ secrets.HEROKU }}
-     # USERNAME: ${{ 'adelowomi@gmail.com' }}
-     # APP_NAME: ${{ 'propertymataazapi' }}
+      USERNAME: ${{ 'kleffcollagetech@gmail.com' }}
+      APP_NAME: ${{ 'liquideadmin' }}
 
-      USERNAME: ${{ 'techops@flypal.ng' }}
-      APP_NAME: ${{ 'flypalng' }}
+      # USERNAME: ${{ 'kleffcollagetech@gmail.com' }}
+     # APP_NAME: ${{ 'propertymataazbe' }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: $HEROKU
-          heroku_app_name: $APP_NAME #Must be unique in Heroku
-          heroku_email: $USERNAME
-          branch: "main"
 
     
-      # # Runs a single command using the runners shell
-      # - name: Run a one-line script
-      #   run: echo Hello, world!
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
     
-      # # Runs a set of commands using the runners shell
-      # - name: Run a multi-line script
-      #   run: |
-      #     git push heroku main
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
+          heroku container:push web -a $APP_NAME
+          heroku container:release web -a $APP_NAME
