--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
-name: pmapihuroku
+name: liquede
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,17 +24,16 @@ jobs:
       APP_NAME: ${{ 'liquideadmin' }}
 
       # USERNAME: ${{ 'kleffcollagetech@gmail.com' }}
-     # APP_NAME: ${{ 'propertymataazbe' }}
+      # APP_NAME: ${{ 'propertymataazbe' }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-    
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-    
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
