--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_BASEURL=https://flypalapi.herokuapp.com
+NEXT_PUBLIC_API_BASEURL=https://liquideapi.herokuapp.com/
 NEXT_PUBLIC_API_DEFINITION=/api-schema.json
