--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"next": "^12.1.0",
 		"next-pwa": "^5.4.6",
 		"next-seo": "^5.3.0",
+		"nextjs-progressbar": "^0.0.14",
 		"openapi-typescript-codegen": "^0.23.0",
 		"react": "^17.0.2",
 		"react-calendar": "^3.7.0",
