--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
 		"framer-motion": "^6",
 		"js-cookie": "^3.0.1",
 		"moment": "^2.29.3",
-		"next": "^12.1.0",
+		"next": "12",
 		"next-pwa": "^5.4.6",
 		"next-seo": "^5.3.0",
 		"openapi-typescript-codegen": "^0.23.0",
-		"react": "^17.0.2",
+		"react": "^18.2.0",
 		"react-calendar": "^3.7.0",
 		"react-chartjs-2": "^4.1.0",
-		"react-dom": "^18.1.0",
+		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.30.0",
 		"react-icons": "^4.3.1",
 		"react-loader-spinner": "^6.0.0-0",
