--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,9 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-`      # Runs a set of commands using the runners shell
+      # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
           heroku container:push web -a $APP_NAME
           heroku container:release web -a $APP_NAME
-`
