--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
 		"@types/file-saver": "^2.0.5",
 		"@types/js-cookie": "^3.0.2",
 		"@types/react-calendar": "^3.5.0",
+		"@types/react-csv": "^1.1.3",
 		"@uploadcare/react-widget": "^2.1.0",
 		"animate.css": "^4.1.1",
 		"axios": "^0.26.1",
-		"chart.js": "^3.7.1",
+		"chart.js": "^3.9.1",
+		"chartjs-plugin-datalabels": "^2.1.0",
 		"eslint-import-resolver-typescript": "^2.7.1",
 		"file-saver": "^2.0.5",
 		"form-data": "^4.0.0",
@@ -52,7 +54,8 @@
 		"openapi-typescript-codegen": "^0.23.0",
 		"react": "^18.2.0",
 		"react-calendar": "^3.7.0",
-		"react-chartjs-2": "^4.1.0",
+		"react-chartjs-2": "^4.3.1",
+		"react-csv": "^2.2.2",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.30.0",
 		"react-icons": "^4.3.1",
