--- a/package.json
+++ b/package.json
@@ -52,14 +52,15 @@
 		"next-seo": "^5.3.0",
 		"nextjs-progressbar": "^0.0.14",
 		"openapi-typescript-codegen": "^0.23.0",
-		"react": "^18.2.0",
+		"react": "^17.0.2",
 		"react-calendar": "^3.7.0",
 		"react-chartjs-2": "^4.3.1",
 		"react-csv": "^2.2.2",
-		"react-dom": "^18.2.0",
+		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.30.0",
 		"react-icons": "^4.3.1",
 		"react-loader-spinner": "^6.0.0-0",
+		"react-loading-skeleton": "^3.1.0",
 		"react-multi-carousel": "^2.8.0",
 		"react-openapi-client": "^0.2.2",
 		"react-reveal": "^1.2.2",
