Added loan setup

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"schema:generate": "node ./script/schema-codegen.js --srcPath ./src/types/api-schema.json --destPath ./src/types/api --separatedFiles true",
 		"schema:codegen": "yarn schema:fetch && yarn schema:generate",
 		"format-staged": "pretty-quick --staged",
-		"openapi:codegen": "openapi --input https://liquideapi.herokuapp.com/swagger/v1/swagger.json --output ./src/services --client axios"
+		"openapi:codegen": "openapi --input https://liquiderescue.herokuapp.com/swagger/v1/swagger.json --output ./src/services --client axios"
 	},
 	"dependencies": {
 		"@babel/preset-env": "^7.16.11",
